--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
-application/config/*
+application/config/database.php
+config_db.php
