--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
-RewriteCond %{HTTPS} off
-RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+# Periksa apakah koneksi tidak menggunakan HTTPS
+RewriteCond %{HTTPS} !=on
+# Alihkan ke HTTPS dengan URL yang sama, tetapi gunakan pengalihan permanen (R=301)
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
