--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,10 @@
 RewriteEngine On
 
-# Jika ada proxy (Cloudflare, Nginx, dll.)
-RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
-# Atau jika koneksi HTTPS tidak terdeteksi oleh server
-RewriteCond %{HTTPS} !=on
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+# # Jika ada proxy (Cloudflare, Nginx, dll.)
+# RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
+# # Atau jika koneksi HTTPS tidak terdeteksi oleh server
+# RewriteCond %{HTTPS} !=on
+# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
