--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,8 @@ RewriteEngine On
 # # Atau jika koneksi HTTPS tidak terdeteksi oleh server
 # RewriteCond %{HTTPS} !=on
 # RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{HTTPS} on
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
