--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,7 @@ RewriteEngine On
 
 
 # RewriteCond %{HTTPS} on
-# RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+# RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
