--- a/.htaccess
+++ b/.htaccess
@@ -3,12 +3,12 @@ RewriteEngine On
 # # Jika ada proxy (Cloudflare, Nginx, dll.)
 # RewriteCond %{HTTP:X-Forwarded-Proto} !https [OR]
 # # Atau jika koneksi HTTPS tidak terdeteksi oleh server
-# RewriteCond %{HTTPS} !=on
-# RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 
 # RewriteCond %{HTTPS} on
-# RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+# RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
