--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,23 @@
-RewriteEngine On
+<IfModule mod_rewrite.c>
+    RewriteEngine On
 
-# Redirect all HTTP traffic to HTTPS
-RewriteCond %{HTTPS} !=on [OR]
-RewriteCond %{HTTP:X-Forwarded-Proto} !https
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    # Force HTTPS (Cloudflare flexible SSL & local tunnel support)
+    RewriteCond %{HTTP:CF-Visitor} '"scheme":"http"'
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE]
 
-# Main rewrite rules for CodeIgniter
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+    # Remove index.php in URL (CodeIgniter 3 standard)
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ index.php/$1 [L]
+
+    # Allow cross-protocol Ajax from behind Cloudflare tunnel
+    Header always set Access-Control-Allow-Origin "*"
+    Header always set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    Header always set Access-Control-Allow-Headers "Content-Type, Authorization"
+
+    # Fix mixed content for scripts/styles/images
+    <If "%{HTTP:X-Forwarded-Proto} = 'http'">
+        Header always set Content-Security-Policy "upgrade-insecure-requests"
+    </If>
+</IfModule>
+
